# xplan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
config/: default.toml
crates/xplan-cache/: Cargo.toml
crates/xplan-cache/src/: invalidation.rs  lib.rs  local.rs  quota.rs  redis_pool.rs
crates/xplan-core/: Cargo.toml
crates/xplan-core/src/: auth.rs  billing.rs  lib.rs  quality.rs  router.rs
crates/xplan-db/: Cargo.toml
crates/xplan-db/src/: lib.rs  models.rs  repo_client_key.rs  repo_model.rs  repo_provider.rs  repo_quality.rs  repo_upstream_key.rs  repo_usage.rs
crates/xplan-provider/: Cargo.toml
crates/xplan-provider/src/: anthropic.rs  bedrock.rs  convert.rs  lib.rs  openai.rs  responses.rs  types.rs
crates/xplan-server/: Cargo.toml
crates/xplan-server/src/: config.rs  main.rs  state.rs
crates/xplan-server/src/admin/: client_keys.rs  dashboard.rs  mod.rs  model_routes.rs  models.rs  providers.rs  upstream_keys.rs  usage.rs
crates/xplan-server/src/middleware/: auth.rs
crates/xplan-server/src/proxy/: chat.rs  messages.rs  mod.rs  models.rs
docs/superpowers/plans/: 2026-06-08-xplan-implementation.md
docs/superpowers/specs/: 2026-06-08-xplan-design.md  2026-06-09-tool-use-conversion-design.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  RelativeTime.tsx  Toast.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ClientKeys.tsx  Dashboard.tsx  Docs.tsx  Login.tsx  Models.tsx  Providers.tsx  Routing.tsx  UpstreamKeys.tsx  Usage.tsx
migrations/: 001_initial.sql  002_add_client_key_role.sql  003_add_provider_model_config.sql  004_add_responses_format.sql  005_cost_precision.sql
tests/: test_api.sh
