[workspace]
resolver = "2"
members = [
    "crates/xplan-db",
    "crates/xplan-cache",
    "crates/xplan-provider",
    "crates/xplan-core",
    "crates/xplan-server",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
moka = { version = "0.12", features = ["future"] }
config = "0.14"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio-stream = "0.1"
bytes = "1"
futures-util = "0.3"
