[package]
name = "xplan-cache"
edition.workspace = true
version.workspace = true

[dependencies]
redis.workspace = true
deadpool-redis.workspace = true
moka.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-lite = "2"
