[package]
name = "xplan-provider"
edition.workspace = true
version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures-core = "0.3"
bytes = "1"
tokio-stream = "0.1"
